--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Number-Tolerant
-version:      1.22
+version:      1.29_01
 version_from: lib/Number/Tolerant.pm
 installdirs:  site
 requires:
