--- a/META.yml
+++ b/META.yml
@@ -2,11 +2,11 @@
 author:
   - 'Ricardo SIGNES <rjbs@cpan.org>'
 distribution_type: module
-generated_by: 'Module::Install version 0.71'
+generated_by: 'Module::Install version 0.77'
 license: perl
 meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.3.html
-  version: 1.3
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
 name: Number-Tolerant
 no_index:
   directory:
@@ -15,4 +15,6 @@ no_index:
 requires:
   Sub::Exporter: 0.95
   perl: 5.8.0
-version: 1.600
+resources:
+  license: http://dev.perl.org/licenses/
+version: 1.601
